# boringssl-kos

./: BUILD.generated.bzl  BUILD.generated_tests.bzl  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  THIRD-PARTY-NOTICES.txt  crypto_test_data.cc  err_data.c  sources.json
cmake/: Config.cmake.in
include/openssl/: ssl.h
ios-aarch64/crypto/chacha/: chacha-armv8.S
ios-aarch64/crypto/fipsmodule/: aesv8-armx64.S  armv8-mont.S  ghashv8-armx64.S  sha1-armv8.S  sha256-armv8.S  sha512-armv8.S
ios-arm/crypto/chacha/: chacha-armv4.S
ios-arm/crypto/fipsmodule/: aes-armv4.S  aesv8-armx32.S  armv4-mont.S  bsaes-armv7.S  ghash-armv4.S  ghashv8-armx32.S  sha1-armv4-large.S  sha256-armv4.S  sha512-armv4.S  vpaes-armv7.S
kos/: cross-build.sh  run-tests.sh
kos/cmake/: tests.cmake
kos/examples/common/: digest.h
kos/examples/common/src/: main.cpp
kos/examples/use_as_submodule/: CMakeLists.txt  README.md  cross-build.sh
kos/examples/use_as_submodule/cmake/: BoringSSL.cmake
kos/examples/use_as_submodule/einit/: CMakeLists.txt
kos/examples/use_as_submodule/einit/src/: security.psl.in
kos/examples/use_as_submodule/hasher/: CMakeLists.txt
kos/examples/use_installed/: CMakeLists.txt  README.md  cross-build.sh
kos/examples/use_installed/einit/: CMakeLists.txt
kos/examples/use_installed/einit/src/: security.psl.in
kos/examples/use_installed/hasher/: CMakeLists.txt
kos/examples/use_with_fetch_content/: CMakeLists.txt  README.md  cross-build.sh
kos/examples/use_with_fetch_content/einit/: CMakeLists.txt
kos/examples/use_with_fetch_content/einit/src/: init.yaml.in  security.psl.in
kos/examples/use_with_fetch_content/hasher/: CMakeLists.txt
linux-aarch64/crypto/chacha/: chacha-armv8.S
linux-aarch64/crypto/fipsmodule/: aesv8-armx64.S  armv8-mont.S  ghashv8-armx64.S  sha1-armv8.S  sha256-armv8.S  sha512-armv8.S
linux-arm/crypto/chacha/: chacha-armv4.S
linux-arm/crypto/fipsmodule/: aes-armv4.S  aesv8-armx32.S  armv4-mont.S  bsaes-armv7.S  ghash-armv4.S  ghashv8-armx32.S  sha1-armv4-large.S  sha256-armv4.S  sha512-armv4.S  vpaes-armv7.S
linux-x86/crypto/bn/: x86-mont.S
linux-x86/crypto/fipsmodule/: aesni-x86.S
linux-x86_64/crypto/bn/: x86_64-mont.S  x86_64-mont5.S
linux-x86_64/crypto/chacha/: chacha-x86_64.S
linux-x86_64/crypto/cipher/: chacha20_poly1305_x86_64.S
linux-x86_64/crypto/cipher_extra/: aes128gcmsiv-x86_64.S  chacha20_poly1305_x86_64.S
linux-x86_64/crypto/ec/: p256-x86_64-asm.S
linux-x86_64/crypto/fipsmodule/: aes-x86_64.S  aesni-gcm-x86_64.S  aesni-x86_64.S  bsaes-x86_64.S  ghash-x86_64.S  md5-x86_64.S  p256-x86_64-asm.S  rdrand-x86_64.S  rsaz-avx2.S  sha1-x86_64.S  sha256-x86_64.S  sha512-x86_64.S  vpaes-x86_64.S  x86_64-mont.S  x86_64-mont5.S
linux-x86_64/crypto/test/: trampoline-x86_64.S
mac-x86/crypto/bn/: x86-mont.S
mac-x86/crypto/fipsmodule/: aesni-x86.S
mac-x86_64/crypto/bn/: x86_64-mont.S  x86_64-mont5.S
mac-x86_64/crypto/chacha/: chacha-x86_64.S
mac-x86_64/crypto/cipher/: chacha20_poly1305_x86_64.S
mac-x86_64/crypto/ec/: p256-x86_64-asm.S
mac-x86_64/crypto/fipsmodule/: aesni-gcm-x86_64.S  p256-x86_64-asm.S  x86_64-mont.S  x86_64-mont5.S
mac-x86_64/crypto/test/: trampoline-x86_64.S
src/: BUILDING.md  CMakeLists.txt
src/crypto/: CMakeLists.txt  crypto.c
src/crypto/asn1/: a_strex.c
src/crypto/bio/: bio_test.cc
src/crypto/rand_extra/: rand_test.cc
src/crypto/x509/: t_x509.c
src/include/openssl/: thread.h
src/ssl/: CMakeLists.txt
win-x86/crypto/bn/: x86-mont.asm
win-x86/crypto/fipsmodule/: aesni-x86.asm
win-x86_64/crypto/bn/: x86_64-mont.asm  x86_64-mont5.asm
win-x86_64/crypto/chacha/: chacha-x86_64.asm
win-x86_64/crypto/cipher/: chacha20_poly1305_x86_64.asm
win-x86_64/crypto/ec/: p256-x86_64-asm.asm
win-x86_64/crypto/fipsmodule/: aesni-gcm-x86_64.asm  p256-x86_64-asm.asm  x86_64-mont5.asm
win-x86_64/crypto/test/: trampoline-x86_64.asm
